Closed Bug 999584 Opened 10 years ago Closed 10 years ago

Don't try to invalidate when a CompositorChild has no LayerManager

Categories

(Core :: Graphics: Layers, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

I'm not 100% sure of the reason but on try we occasionally get InvalidateAll calls on a CompositorChild without an mLayerManager. In other functions there's a precedent for nullcheck in other functions, so I decided to add one here as well.
Attachment #8410431 - Flags: review?(nical.bugzilla)
Attachment #8410431 - Flags: review?(nical.bugzilla) → review+
https://hg.mozilla.org/mozilla-central/rev/58879e37779b
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: