Bug 999584: Do not try to invalidate a null layermanager. r=nical